--- a/applications/web/package.json
+++ b/applications/web/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.12.4",
     "file-loader": "2.0.0",
+    "firebase": "^5.9.4",
     "firebase-tools": "^6.6.0",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
