--- a/applications/web/package.json
+++ b/applications/web/package.json
@@ -8,7 +8,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "identity-obj-proxy": "^3.0.0",
     "install": "^0.12.2",
+    "jest": "^24.7.1",
     "npm": "^6.9.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
@@ -22,6 +26,7 @@
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server",
     "build:development": "node_modules/.bin/webpack --config webpack.config.js --mode development",
-    "build:production": "node_modules/.bin/webpack --config webpack.config.js --mode production"
+    "build:production": "node_modules/.bin/webpack --config webpack.config.js --mode production",
+    "test": "jest"
   }
 }
