--- a/applications/web/package.json
+++ b/applications/web/package.json
@@ -21,10 +21,13 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "connected-react-router": "^6.4.0",
+    "history": "^4.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
+    "react-router": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
