--- a/applications/web/package.json
+++ b/applications/web/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "connected-react-router": "^6.4.0",
+    "firebase": "^5.10.0",
+    "firebase-tools": "^6.7.0",
     "history": "^4.9.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -32,9 +34,10 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "node_modules/.bin/webpack-dev-server",
     "build:development": "node_modules/.bin/webpack --config webpack.config.js --mode development",
     "build:production": "node_modules/.bin/webpack --config webpack.config.js --mode production",
+    "deploy": "./scripts/deploy.sh",
+    "start": "node_modules/.bin/webpack-dev-server",
     "test": "jest"
   }
 }
