--- a/applications/web/.circleci/config.yml
+++ b/applications/web/.circleci/config.yml
@@ -5,7 +5,5 @@ jobs:
       - image: circleci/ruby:2.4.2-stretch-node
     steps:
       - checkout
-      - run:
-          name: Check current version of node
-          command: node -v
+      - run: echo "A first hello"
 
