--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.0
 jobs:
   build:
+    working_directory: ~/applications/web
     docker:
       - image: circleci/ruby:2.4.2-stretch-node
     steps:
