--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - checkout
       - run: ./scripts/test.sh
-      - run: ./scripts/build.sh
+      - run: ./scripts/deploy.sh
 
