--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,23 @@
 version: 2.0
 jobs:
-  build:
+  test:
     docker:
       - image: circleci/ruby:2.4.2-stretch-node
     resource_class: xlarge
     steps:
       - checkout
       - run: ./scripts/test.sh
+  deploy:
+    docker:
+      - image: circleci/ruby:2.4.2-stretch-node
+    resource_class: medium
+    steps:
+      - checkout
       - run: ./scripts/deploy.sh
 
 workflows:
   version: 2
-  build_and_test:
+  test_and_deploy:
     jobs:
       - build
-
+      - test
