--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,5 +19,7 @@ workflows:
   version: 2
   test_and_deploy:
     jobs:
-      - build
       - test
+      - deploy:
+        requires:
+          - test
