--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   test:
     docker:
       - image: circleci/ruby:2.4.2-stretch-node
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - run: echo "test step"
