--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,6 @@ workflows:
   test_and_deploy:
     jobs:
       - test
-#      - deploy:
-#        requires:
-#          - test
+      - deploy:
+        requires:
+          - test
