I'll explain this when I'm sober .. or revert it

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,9 @@ workflows:
       - deploy:
           requires:
             - test
+  deploy_and_test:
+    jobs:
+      - deploy
+      - test:
+          requires:
+            - deploy
