--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,16 @@
 version: 2.0
 jobs:
-  deploy:
-    docker:
-      - image: circleci/ruby:2.4.2-stretch-node
-    resource_class: xlarge
-    steps:
-      - checkout
-      - run: "echo 'run'"
-  test:
+  build:
     docker:
       - image: circleci/ruby:2.4.2-stretch-node
     resource_class: medium
+    steps:
+      - checkout
+      - run: "echo 'build'"
+  test:
+    docker:
+      - image: circleci/ruby:2.4.2-stretch-node
+    resource_class: xlarge
     steps:
       - checkout
       - run: "echo 'test'"
