--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
     resource_class: xlarge
     steps:
       - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run: "echo 'build'"
   test:
     docker:
