--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
   deploy:
     docker:
       - image: circleci/ruby:2.4.2-stretch-node
-    resource_class: medium
+    resource_class: xlarge
     steps:
       - checkout
       - run: "echo 'deploy'"
