--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,14 @@
 version: 2.0
 jobs:
-  build:
-    docker:
-      - image: circleci/ruby:2.4.2-stretch-node
-    resource_class: xlarge
-    steps:
-      - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
-      - run: "echo 'build'"
+#  build:
+#    docker:
+#      - image: circleci/ruby:2.4.2-stretch-node
+#    resource_class: xlarge
+#    steps:
+#      - checkout
+#      - setup_remote_docker:
+#          docker_layer_caching: true
+#      - run: "echo 'build'"
   test:
     docker:
       - image: circleci/ruby:2.4.2-stretch-node
